####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index.html $(prefix)/doc/kdev/index.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-1.html $(prefix)/doc/kdev/index-1.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-2.html $(prefix)/doc/kdev/index-2.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-3.html $(prefix)/doc/kdev/index-3.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-4.html $(prefix)/doc/kdev/index-4.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-5.html $(prefix)/doc/kdev/index-5.html
	$(mkinstalldirs) $(prefix)/doc/kdev/
	$(INSTALL_DATA) index-6.html $(prefix)/doc/kdev/index-6.html

uninstall-local:
	-rm -f $(prefix)/doc/kdev/index.html
	-rm -f $(prefix)/doc/kdev/index-1.html
	-rm -f $(prefix)/doc/kdev/index-2.html
	-rm -f $(prefix)/doc/kdev/index-3.html
	-rm -f $(prefix)/doc/kdev/index-4.html
	-rm -f $(prefix)/doc/kdev/index-5.html
	-rm -f $(prefix)/doc/kdev/index-6.html

####### kdevelop will overwrite this part!!! (end)############
